Improve logging when removing an application
Log only when it is removed, add some more validation